$Id: History,v 1.1 1999-01-08 16:34:48 gunter Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Test 05 History file
                    --------------------
This file should be used by the test developer to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

9th August 1998  John Allison
- Changed G4UIterminal to G4UIGAG.

June 27, 98 G. Cosmo
- Created.
